# cmake-presets

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  flake.nix  main.c
presets/: .gitignore  common.json  default.p.json  nix_clang.p.json  nix_gcc.p.json
scripts/: configure.cmake  format.cmake
